--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -81,7 +80,7 @@
             let data = await response.json();
             document.getElementById("resultado").innerText = data.error 
                 ? `Error: ${data.error}` 
-                : `Rango: ${data.red_inicio} - ${data.red_fin}`;
+                : `Rango: ${data.red_inicio} - ${data.red_fin}, Broadcast: ${data.broadcast_address}`;
         }
     </script>
 </head>
