--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         }
     </style>
     <script>
-        const API_URL = "https://tu-api-en-render.com"; // Reemplázalo con la URL correcta
+        const API_URL = "https://calculadoraredesipv4.onrender.com"; // Reemplázalo con la URL correcta
 
         async function calcularRed() {
             let prefijo = document.getElementById("prefijo").value;
