--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         }
     </style>
     <script>
-        const API_URL = "https://tudominio.onrender.com"; // Reemplaza con la URL de tu API
+        const API_URL = "https://calculadoraredesipv4.onrender.com"; // Reemplaza con la URL de tu API
 
         async function calcularVLSM() {
             let red_base = document.getElementById("red_base").value;
